# RobotVision2024

./: .gitignore  Cargo.toml  README.md  build.env  calibration.py  cam-cal.json  config.json  deploy.bat  package.bat
configs/: cam-cal.json  config.json  network.json  server.json
src/: camera.rs  config.rs  gui.rs  interface.rs  main.rs  network.rs  process.rs
src/nt/: client.rs
src/server/: config.rs  error.rs  mod.rs  server.rs
