[package]
name = "vision"
version = "2024.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI Libraries 
eframe = { version = "0.25.0", optional = true }
egui = { version = "0.25.0", optional = true }
egui_extras = { version = "0.25.0", features = ["all_loaders"], optional = true}

# Image Libraries
image = "0.24.8"
imageproc = "0.23.0"

# Important Libs
tokio = {version = "1.35", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["full"]}
crossbeam-channel = "0.5.11"
serde_json = "1.0"
serde = {version = "1.0.195", features = ["derive"]}
thiserror = "1.0.56"
apriltag = "0.4.0"
apriltag-image = "0.1.0"
nalgebra = "0.32.3"

# Camera Input
[dependencies.nokhwa]
version = "0.10.3"
features = ["input-native", "output-threaded"]

[features]
gui = ["dep:eframe", "dep:egui", "dep:egui_extras"]

# Comp Distro
[profile.comp]
inherits = "release"
lto = true
